# aaico-voice-processing-challenge-2024

./: .gitignore  Dockerfile  Makefile  README.md  aaico_voice_processing_challenge.py  first.pkl  pyproject.toml  sec.pkl  third.pkl
.github/workflows/: app.yml
src/solution/: experimental.py  main.py
tests/: test_solution.py
