[tool.poetry]
name = "hacsolution"
version = "0.1.0"
description = "Solution for the AAICO Hacathon by Digital Creators"
authors = ["Alexandr Ovsyannikov <alexov2004@gmail.com>", "Andrey Pomortsev <andreypomortsev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
librosa = "^0.10.1"
numpy = "^1.26.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^8.0.0"
flake8 = "^7.0.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
